refactor: remove dead code, fix bugs, clean console.logs

--- a/src/index.css
+++ b/src/index.css
@@ -10,8 +10,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /* font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif; */
-  /* font-family: "Roboto" */
   font-family: "Archivo";
 }
 
@@ -21,12 +19,10 @@
 }
 
 ::-webkit-scrollbar-track {
-  /* background: #f1f1f1; */
   background: #202329;
 }
 
 ::-webkit-scrollbar-thumb {
-  /* background: #888; */
   background: #2e333d;
   border-radius: 10px;
 }
@@ -36,19 +32,13 @@
 }
 
 body {
-  /* background-image: url("/bg.jpg"); */
-  /* background-repeat: repeat-x; */
-  /* background-size: auto 100vh; */
-  /* background-position: top left; */
-  /* background-color: #202329; */
-  /* background-color: #0F4B81; */
   background-color: #131313;
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100vh;
   color: white;
-  overflow: none;
+  overflow: hidden;
 }
 
 .w-90vw {
@@ -81,7 +71,6 @@ body {
 
     .texts {
       p {
-        /* background-color: #5183fe; */
         padding: 1px 15px 15px 10px;
         background-color: #fbbf24;
         align-self: flex-end;
@@ -95,7 +84,6 @@ body {
     p {
       padding: 1px 5px 15px 10px;
       align-self: flex-start;
-      /* background-color: rgba(17, 25, 40, 0.75); */
       background-color: #2e333d;
       border-bottom-left-radius: 0 0;
     }
